--- a/src/sass/teencanta/_front-page.scss
+++ b/src/sass/teencanta/_front-page.scss
@@ -1,4 +1,7 @@
 // Titulos Sections
+// section > a {
+//   display: block;
+// }
 .title-section {
   font-family: var(--ffuente-amaranth);
   margin: 0rem 0 0 0;
@@ -21,6 +24,8 @@
 .card {
   display: grid;
   grid-template-rows: repeat(2, auto);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
 }
 .card-img {
   width: 100%;
@@ -120,7 +125,6 @@
 @media screen and (min-width: 860px) {
   .grid--card {
     grid-template-columns: repeat(3, minmax(240px, 1fr));
-    //grid-template-rows: repeat(3, minmax(170px, 1fr));
   }
   .title-section {
     //grid-row: 1/5;
