--- a/src/sass/teencanta/_categorias-perfiles.scss
+++ b/src/sass/teencanta/_categorias-perfiles.scss
@@ -1,52 +1,15 @@
-.aside-right--2{display: none;
-visibility: none;}
+.aside-right--2 {
+  display: none;
+  visibility: none;
+}
 
-/*
-
-*/
-.color-categoria--dondecomer {
-  color: var(--color-dondecomer);
-}
-.border-categoria--dondecomer{
-  border: 0.5rem solid var(--color-dondecomer);
-}
-.color-categoria--dondedormir {
-  color: var(--color-dondedormir);
-}
-.border-categoria--dondedormir{
-  border: 0.5rem solid var(--color-dondedormir);
-}
-.color-categoria--quevisitar {
-  color: var(--color-quevisitar);
-}
-.border-categoria--quevisitar{
-  border: 0.5rem solid var(--color-quevisitar);
-}
-.color-categoria--artesania {
-  color: var(--color-artesania);
-}
-.border-categoria--artesania{
-  border: 0.5rem solid var(--color-artesania);
-} 
-.color-categoria--emprendedores {
-  color: var(--color-emprendedor);
-}
-.border-categoria--emprendedores{
-  border: 0.5rem solid var(--color-emprendedor);
-}
-.color-categoria--productores {
-  color: var(--color-productor);
-}
-.border-categoria--productores{
-  border: 0.5rem solid var(--color-productor);
-}
 
 .grid-categorias {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  gap: 2rem;
+  gap: 1rem;
   margin: 0 auto;
-  margin-bottom: 2rem;
+  // margin-bottom: 2rem;
   > h1 {
     align-self: center;
     margin: 1rem 0 0 0;
@@ -62,52 +25,10 @@ visibility: none;}
     display: none;
   }
 }
-@media screen and (min-width: 860px) {
-  .grid-categorias {
-    grid-template-columns: repeat(3, minmax(200px, 1fr));
-    grid-template-rows: min-content;
-    > h1 {
-      grid-column: 1 / 4;
-      grid-row: 1 / 2;
-      margin-top: 1.5rem;
-    }
-    p {
-      grid-column: 1 / 4;
-      grid-row: 2 / 3;
-    }
-  }
-  .paginacion {
-    grid-column: 2 / 3;
-    grid-row: auto;
-  }
-  .section-info {
-    grid-column: 1 / 4;
-    grid-row: 1 / 4;
-  }
-  .collage--servicios {
-    grid-column: 1 / 4;
-    grid-row: 3 / 4;
-  }
-  .collage--servicios > img {
-    margin: 0 auto;
-    margin-bottom: 2rem;
-    
-    border-radius: 10px;
-    height: 18rem;
-  }
-  .section-info {
-    > p {
-      margin: 0 3rem;
-    }
-  }
-  .aside-right--2 {
-    display: none;
-  }
-}
-@media screen and (min-width: 1230px) {
-  section * {
-    justify-self: center;
-  }
+.sub-grid-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .paginacion {
   // display: none;
@@ -143,6 +64,11 @@ visibility: none;}
 .paginacion-current {
   background-color: var(--color-dondecomer);
 }
+
+/* !
+CARTAS
+*/
+
 .cards--servicios {
   background-color: #fff;
   border-radius: 10px;
@@ -183,6 +109,11 @@ visibility: none;}
   margin-bottom: 1rem;
   text-decoration: none;
 }
+.card-btn,
+a,
+button > label {
+  cursor: pointer;
+}
 //  mejorar comentarios
 // Not dry code :C but more quick this way lmao
 .section-info {
@@ -209,5 +140,129 @@ visibility: none;}
   }
   > img {
     display: none;
+  }
+}
+
+@media screen and (min-width: 860px) {
+  .grid-categorias {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: min-content;
+    gap: 1.5rem;
+    > h1 {
+      grid-column: 1 / 4;
+      grid-row: 1 / 2;
+      margin-top: 1.5rem;
+    }
+    p {
+      grid-column: 1 / 4;
+      grid-row: 2 / 3;
+    }
+  }
+  .paginacion {
+    grid-column: 2 / 3;
+    grid-row: auto;
+  }
+  .section-info {
+    grid-column: 1 / 4;
+    grid-row: 1 / 4;
+  }
+  .collage--servicios {
+    grid-column: 1 / 4;
+    grid-row: 3 / 4;
+  }
+  .collage--servicios > img {
+    margin: 0 auto;
+    margin-bottom: 2rem;
+
+    border-radius: 10px;
+    height: 18rem;
+  }
+  .section-info {
+    > p {
+      margin: 0 3rem;
+    }
+  }
+  .aside-right--2 {
+    display: none;
+  }
+  .sub-grid-content {
+    display: flex;
+    flex-direction: row;
+    grid-column: 1 / 4;
+    grid-row: 2 / 4;
+  }
+}
+@media screen and(min-width: 1280px) {
+  // section * {
+  //   justify-self: center;
+  // }
+  .grid-categorias {
+    grid-template-columns: 1fr 3.5fr 1fr;
+    gap: 1rem;
+    .sub-grid-content {
+      flex-direction: column;
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+    }
+    .aside--left {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      padding:1rem;
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+    }
+    .aside--left-content{
+      display: flex;
+      flex-direction: column;
+      padding: 1rem;
+      color: black;
+      background-color: #fff;
+      border-radius: 10px;
+      > *:not(h2) {
+        border-bottom: 1px solid whitesmoke;
+        text-align: center;
+      }
+      > a{
+        padding: .8rem;
+        color: black;
+      }
+      > h2{
+        margin: 0;
+        text-align: center;
+      }
+    }
+    .aside--right,
+    .aside-right--2 {
+      display: block;
+      grid-column: 3 / 4;
+      grid-row: 2 / 4;
+    }
+  }
+  .cards--servicios {
+    display: flex;
+    .img--servicios {
+      object-fit: cover;
+      max-width: 20rem;
+      border-radius: 10px 0 0 10px;
+    }
+  }
+
+  .card-info {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0.7rem;
+    h2,
+    p {
+      margin: 0rem;
+      padding: 0rem;
+    }
+    button {
+      margin: 0;
+    }
+    > a {
+      align-self: flex-end;
+    }
   }
 }
