Single vitrina mobile ready

--- a/src/sass/teencanta/_categorias-perfiles.scss
+++ b/src/sass/teencanta/_categorias-perfiles.scss
@@ -3,7 +3,6 @@
   visibility: none;
 }
 
-
 .grid-categorias {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -25,6 +24,10 @@
     display: none;
   }
 }
+.grid-categorias--section1{
+  margin-bottom: 1rem;
+}
+
 .sub-grid-content {
   display: flex;
   flex-direction: column;
@@ -199,8 +202,22 @@ button > label {
   .grid-categorias {
     grid-template-columns: 1fr 3.5fr 1fr;
     gap: 1rem;
+    > h1 {
+      grid-column: 3 / 4;
+      grid-row: 2 / 2;
+      align-self: first baseline;
+      margin: 0;
+    }
+    
+    .paginacion {
+      // align-self: end;
+      grid-row: 3 / 4;
+      // max-height: 15rem;
+    }
     .sub-grid-content {
+      align-self: center;
       flex-direction: column;
+      // padding-top: 3rem;
       grid-column: 2 / 3;
       grid-row: 2 / 3;
     }
@@ -208,11 +225,11 @@ button > label {
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      padding:1rem;
+      padding: 1rem;
       grid-column: 1 / 2;
       grid-row: 2 / 3;
     }
-    .aside--left-content{
+    .aside--left-content {
       display: flex;
       flex-direction: column;
       padding: 1rem;
@@ -223,20 +240,25 @@ button > label {
         border-bottom: 1px solid whitesmoke;
         text-align: center;
       }
-      > a{
-        padding: .8rem;
+      > a {
+        padding: 0.8rem;
         color: black;
       }
-      > h2{
+      > h2 {
         margin: 0;
         text-align: center;
       }
     }
+    .aside--right {
+      display: flex;
+      flex-direction: column;
+      align-self: end;
+      margin-bottom: 1rem;
+    }
     .aside--right,
     .aside-right--2 {
-      display: block;
       grid-column: 3 / 4;
-      grid-row: 2 / 4;
+      grid-row: 2 / 3;
     }
   }
   .cards--servicios {
@@ -263,6 +285,16 @@ button > label {
     }
     > a {
       align-self: flex-end;
+    }
+  }
+  .section-info{
+    > h1 {
+      grid-column: 1 / 4;
+      grid-row: 1 / 2;
+    }
+    > p {
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
     }
   }
 }
