--- a/src/sass/teencanta/_categorias-perfil-single.scss
+++ b/src/sass/teencanta/_categorias-perfil-single.scss
@@ -1,13 +1,13 @@
-.grid--single-perfil > *{
+.grid--single-perfil > * {
   font-family: Raleway;
 }
-.breadcrumbs{
-  padding: .5rem;
+.breadcrumbs {
+  padding: 0.5rem;
   text-align: center;
-  font-size: .9rem;
-  color:rgba(0, 0, 0, 0.5);
+  font-size: 0.9rem;
+  color: rgba(0, 0, 0, 0.5);
   a {
-    color:rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.5);
   }
 }
 .current {
@@ -21,7 +21,7 @@
 }
 .info-perfil {
   display: grid;
-  gap: .8rem;
+  gap: 0.8rem;
   padding: 0.3rem;
 }
 .info-perfil,
@@ -31,28 +31,38 @@
     margin: 0;
   }
   > h2 {
-    text-decoration: underline;
+    // text-decoration: underline;
   }
-}   
+}
 .info-perfil--content {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   //   gap: .8rem;
+  > h1 {
+    color: #fff;
+  }
   > p {
     margin-top: 0;
   }
 }
+.info-contacto--descripcion{
+  padding: .5rem;
+}
 .info-perfil--content {
-  padding: 0.2rem;
-  text-align: justify;
+  > h1 {
+    border-radius: 10px 10px 0 0;
+  }
+  gap: 0rem;
+  padding: 0rem;
+  
+  text-align: center;
   // white-space: pre-wrap;
 }
 .info-contacto {
   display: flex;
   flex-direction: column;
-  gap: .6rem;
-  padding: .5rem;
+  gap: 0.6rem;
+  padding: 0.5rem;
   > p {
     margin: 0;
     text-align: center;
@@ -65,7 +75,6 @@
   }
   > p:nth-of-type(1)::before {
     content: "\f007";
-    
   }
   > p:nth-of-type(2)::before {
     content: "\f5a0";
@@ -81,14 +90,14 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding-top: .5rem;
+  padding-top: 0.5rem;
 }
 
 .info-perfil--sellos {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: .5rem;
+  padding: 0.5rem;
   align-items: end;
   > img {
     padding: 0.5rem;
@@ -119,3 +128,123 @@
 .aside-r-img {
   display: none;
 }
+
+@media screen and (min-width: 860px) {
+  .info-perfil {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-rows: repeat(minmax(200px, 1fr));
+  }
+
+  .info-perfil--content {
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+    display: grid;
+    //grid-template-rows: repeat(3, min-content);
+  }
+
+  .titulo-sections-perfil--contacto {
+    grid-column: 1 / 4;
+    grid-row: 2 / 3;
+  }
+  .titulo-sections-perfil--sellos {
+    grid-column: 1 / 4;
+    grid-row: 4 / 5;
+  }
+  .titulo-sections-perfil--fotos {
+    grid-column: 1 / 4;
+    grid-row: 6 / 7;
+  }
+  // LEMAO
+  .info-contacto {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+  }
+  .info-perfil--rrss {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+    flex-direction: column;
+  }
+  .info-perfil--sellos {
+    grid-column: 1 / 4;
+    grid-row: 5 / 6;
+  }
+
+  .galeria--productos {
+    grid-column: 1 / 4;
+    grid-row: 7 / 8;
+    grid-template-columns: repeat(2, minmax(18.75rem, auto));
+  }
+}
+//tablet
+
+@media screen and (min-width: 1024px) {
+  // .info-perfil--content{
+  //   grid-template-columns: repeat(2, 1.5fr 1fr);
+  //   grid-template-rows: repeat(2, .5fr 1fr);
+  // }
+  .info-perfil--content picture > img{
+    border-radius: 0px 0px 0px 10px;
+  } 
+  .info-perfil--content > h1 {
+    //background-color: var(--color-dondecomer);
+    border-radius: 10px 10px 0px 0px;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+  }
+  .info-perfil--content picture{
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+  .info-perfil--content > div {
+    grid-row: 2 / 2;
+  }
+  .info-contacto--descripcion {
+    color: #000;
+    text-align: justify;
+    line-height: 2rem;
+    //padding: 0rem 1rem 0rem 1rem;
+    align-self: baseline;
+  }
+
+  .info-contacto {
+    flex-direction: row;
+    flex-wrap: wrap;
+    // width: content;
+    grid-column: 1 / 2;
+  }
+  .info-perfil--rrss {
+    flex-direction: row;
+    flex-wrap: wrap;
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+  .titulo-sections-perfil--sellos {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+  }
+  .info-perfil--sellos {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+  }
+
+  .galeria--productos{
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+
+@media screen and (min-width: 1280px) {
+
+  .info-perfil--content > picture > img{
+    max-height: 17rem;
+  }
+
+
+
+  .info-contacto{
+    flex-direction: column;
+    align-content: space-around;
+    justify-content: space-around;
+  }
+
+  }
