feature/noticia listo; single noticia en mobile

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -104,3 +104,5 @@ Andacollo te encanta Styles
 @import "teencanta/footer";
 @import "teencanta/categorias-perfiles";
 @import "teencanta/categorias-perfil-single";
+@import "teencanta/noticias";
+@import "teencanta/single-noticias";
