--- a/src/sass/teencanta/_categorias-perfil-single.scss
+++ b/src/sass/teencanta/_categorias-perfil-single.scss
@@ -65,7 +65,7 @@
   padding: 0.5rem;
   > p {
     margin: 0;
-    text-align: center;
+    text-align: left;
   }
   > p::before {
     font-family: "Font Awesome 5 Free";
