rm: normalize add: reseter

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -51,11 +51,11 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Normalize
 --------------------------------------------- */
-@import "generic/normalize";
+@import "generic/reseter";
 
 /* Box sizing
 --------------------------------------------- */
-@import "generic/box-sizing";
+// @import "generic/box-sizing";
 
 /*--------------------------------------------------------------
 # Base
