--- a/src/sass/teencanta/_fonts.scss
+++ b/src/sass/teencanta/_fonts.scss
@@ -1,43 +1,42 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,200;1,400;1,700&display=swap");
 @font-face {
-    font-family: 'Amaranth';
-    src: url('/src/fonts/amaranth-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: 'Amaranth';
-    src: url('/src/fonts/amaranth-bold-webfont.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: 'Amaranth';
-    src: url('/src/fonts/amaranth-bolditalic-webfont.woff') format('woff');
-    font-weight: bold;
-    font-style: italic;
-  }
-  
-  @font-face {
-    font-family: 'Amaranth';
-    src: url('/src/fonts/amaranth-italic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-  }
+  font-family: "Amaranth";
+  src: url("/src/fonts/amaranth-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 
-  @font-face {
-    font-family: 'Bebas Neue';
-    src: url('/src/fonts/bebasneue-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-  }
+@font-face {
+  font-family: "Amaranth";
+  src: url("/src/fonts/amaranth-bold-webfont.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
 
-  @font-face {
-    font-family: 'Boogaloo';
-    src: url('/src/fonts/boogaloo-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+@font-face {
+  font-family: "Amaranth";
+  src: url("/src/fonts/amaranth-bolditalic-webfont.woff") format("woff");
+  font-weight: bold;
+  font-style: italic;
+}
 
+@font-face {
+  font-family: "Amaranth";
+  src: url("/src/fonts/amaranth-italic-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Bebas Neue";
+  src: url("/src/fonts/bebasneue-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Boogaloo";
+  src: url("/src/fonts/boogaloo-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
