--- a/src/sass/teencanta/_single-noticias.scss
+++ b/src/sass/teencanta/_single-noticias.scss
@@ -7,18 +7,17 @@
   border-radius: 10px 10px 10px 10px;
 }
 .img-noticias--1 > img {
-  border-radius: 10px 10px 10px 0;
+  border-radius: 10px 10px 0px 0;
+  //width: 200rem;
 }
 .img-noticias--1 {
   order: 2;
 }
 .texto-descripcion {
-  padding: 0rem 1rem 1rem 1rem;
   order: 1;
 }
 .container-descripcion--noticia {
   text-align: justify;
-  margin-bottom: 1rem;
 }
 .container-meta-data--noticia {
   display: flex;
@@ -28,12 +27,14 @@
   gap: 1rem;
 }
 .flex-row {
+  margin-top: 1.5rem;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: row-reverse;
+  justify-content: space-between;
 }
 .title-noticia--single {
-  margin: 0.5rem 0rem;
+  font-weight: bolder;
+  text-decoration: underline;
 }
 .container-descripcion--noticia,
 .title-noticia--single,
@@ -41,7 +42,7 @@
   color: #fff;
 }
 .descripcion-n {
-  width: 5rem;
+  width: 3rem;
 }
 .container-img--2,
 .container-img--2 > picture > img,
@@ -69,7 +70,7 @@
 
 .container-contenido--noticias {
   text-align: justify;
-  // line-height: 1rem;
+  line-height: 2rem;
 }
 
 .dp-none {
@@ -93,6 +94,15 @@
   justify-self: flex-end;
   text-decoration: none;
 }
+.texto-descripcion {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 1.5rem;
+  gap: 0.5rem;
+  text-align: justify;
+}
+
 @media screen and(min-width: var(--big-tablet-screen)) {
   .justify-flex-end {
     grid-column: 3 / 4;
@@ -101,11 +111,11 @@
 }
 @media screen and(min-width: 1024px) {
   .section-single--noticia {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(4, max-content);
   }
-  .breadcrumb{
-    grid-column: 1 / 5;
+  .breadcrumb {
+    grid-column: 1 / 8;
     grid-row: 1 / 2;
   }
   .img-noticias--1 {
@@ -113,33 +123,42 @@
     height: 100%;
     object-fit: cover;
   }
+  .img-noticias--1 > img {
+    border-radius: 0px 10px 10px 0px;
+    width: 200rem;
+  }
   .container-descripcion {
     display: flex;
-    grid-column: 1 / 5;
+    grid-column: 1 / 8;
     grid-row: 2 / 3;
+
   }
-  .container-contenido--noticias{
-    grid-column: 1 / 3;
-    grid-row: 3 / 4 ;
+  .container-contenido--noticias {
+    grid-column: 1 / 5;
+    grid-row: 3 / 4;
   }
   .texto-descripcion {
-    padding: 0.5rem;
+    padding: 1.5rem;
   }
   .descripcion-n {
     width: 2rem;
   }
-  .container-img--2{
-    grid-column: 3 / 5;
+  .container-img--2 {
+    grid-column: 5 / 8;
     grid-row: 3 / 4;
+    height: min-content;
+    align-self: center;
   }
-.justify-flex-end{
-  grid-column: 4 / 5;
-  grid-row: 4 / 5;
-}
+  .container-img--2 img {
+    height: 35rem;
+    object-fit: cover;
+  }
+  .justify-flex-end {
+    grid-column: 7 / 8;
+    grid-row: 5 / 6;
+  }
   .flex-row {
-    flex-direction: column;
-  }
-  .title-noticia--single {
+    //flex-direction: column;
   }
 }
 
