--- a/src/sass/teencanta/_single-noticias.scss
+++ b/src/sass/teencanta/_single-noticias.scss
@@ -34,7 +34,8 @@
 }
 .title-noticia--single {
   font-weight: bolder;
-  text-decoration: underline;
+  text-transform: uppercase;
+  text-align: left;
 }
 .container-descripcion--noticia,
 .title-noticia--single,
@@ -42,7 +43,7 @@
   color: #fff;
 }
 .descripcion-n {
-  width: 3rem;
+  width: 2.5rem;
 }
 .container-img--2,
 .container-img--2 > picture > img,
@@ -70,11 +71,12 @@
 
 .container-contenido--noticias {
   text-align: justify;
-  line-height: 2rem;
+  line-height: 1.525rem;
+  white-space:  pre-line;
 }
 
 .dp-none {
-  display: none;
+  //display: none;
 }
 .mt-0 > p {
   margin-top: 0;
@@ -99,7 +101,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   padding: 1.5rem;
-  gap: 0.5rem;
+  gap: 0.8rem;
   text-align: justify;
 }
 
