--- a/src/sass/teencanta/_slideshow.scss
+++ b/src/sass/teencanta/_slideshow.scss
@@ -54,9 +54,13 @@
     width: max-content;
     margin: 0 auto;
     text-align: center;
+    & a {
+      text-decoration: none;
+    }
   }
   .slide-title, .slide-subtitle{
     border-radius: 10px;
+    
   }
   .slide-title {
     background-color: var(--color-servicios);
@@ -65,7 +69,7 @@
   }
 
   .slide-subtitle {
-    background-color: var(--color-productos);
+    background-color: var(--color-dondedormir);
     height: max-content;
     width: max-content;
     padding: 0.2rem 1rem;
