--- a/src/sass/teencanta/_front-page.scss
+++ b/src/sass/teencanta/_front-page.scss
@@ -24,13 +24,27 @@
 .card {
   display: grid;
   grid-template-rows: repeat(2, auto);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
+  filter: drop-shadow(0px 5px 4px rgba(0, 0, 0, 0.3));
+  transition: transform 1s;
 }
+.card:hover{
+  animation: zoom-in 1.5s ease-in;
+  // para que quede al final del ultimo keyframe y no se "resetee"
+  animation-fill-mode: forwards
+}
+@keyframes zoom-in {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.04);
+  }
+}
+
 .card-img {
   width: 100%;
   height: 14rem;
- object-fit: cover;
+  object-fit: cover;
   border-radius: 10px;
   grid-row: 1 / -1;
 }
@@ -120,7 +134,7 @@
 }
 @media screen and (min-width: 860px) {
   .grid--card {
-    grid-template-columns: repeat(3, minmax(240px, 1fr));
+    grid-template-columns: repeat(3, minmax(213px, 1fr));
   }
   .title-section {
     //grid-row: 1/5;
@@ -138,6 +152,9 @@
   .aside--productos {
     grid-row: 3 / 4;
   }
+
+
+
 }
 @media screen and (min-width: 1280px) {
   .grid--card {
