--- a/src/sass/teencanta/_single-noticias.scss
+++ b/src/sass/teencanta/_single-noticias.scss
@@ -2,8 +2,13 @@
   display: grid;
   gap: 1rem;
 }
-.container-descripcion {
+.container-descripcion,
+.container-complementario-bottom {
   background-color: hsl(230, 62%, 30%);
+  //background: linear-gradient(90deg, rgba(29,45,124,1) 36%, rgba(29,45,124,0) 100%);
+  //background: rgb(29,45,124);
+  //background: linear-gradient(90deg, rgba(29,45,124,1) 30%, rgba(29,45,124,0) 100%);
+  //background: linear-gradient(269.89deg, #1D2D7C 0.1%, rgba(29, 45, 124, 0) 0.11%, #1D2D7C 66.63%); 
   border-radius: 10px 10px 10px 10px;
 }
 .img-noticias--1 > img {
@@ -12,6 +17,8 @@
 }
 .img-noticias--1 {
   order: 2;
+  //z-index: -1;
+  //mask-image: linear-gradient(-90deg, rgba(29,45,124,1) 60%, rgba(29,45,124,0) 100%);
 }
 .texto-descripcion {
   order: 1;
@@ -124,6 +131,7 @@
     display: block;
     height: 100%;
     object-fit: cover;
+
   }
   .img-noticias--1 > img {
     border-radius: 0px 10px 10px 0px;
@@ -134,6 +142,11 @@
     grid-column: 1 / 8;
     grid-row: 2 / 3;
 
+  }
+  .container-complementario-bottom{
+    display: flex;
+    grid-column: 1 / 8;
+    grid-row: 4 / 5;
   }
   .container-contenido--noticias {
     grid-column: 1 / 5;
