--- a/src/sass/teencanta/_teencanta.scss
+++ b/src/sass/teencanta/_teencanta.scss
@@ -14,7 +14,7 @@
   --ffuente-bebasNeue: "Bebas Neue";
   --ffuente-boogaloo: "Boogaloo";
 
-  --fs-h1: clamp(1.525rem, 3.125vw, 2rem);
+  --fs-h1: clamp(1.5rem, 2vw + 1rem, 2.25rem);
   --fs-h2: clamp(1.125rem, 2.525vw, 1.825rem);
   --fs-p: clamp(1rem, 2vw, 1.125rem);
   --fs-big-desktop: clamp();
@@ -28,9 +28,11 @@
 }
 * {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
+
 h1 {
-  // font-size: var(--fs-h1);
+  //font-size: var(--fs-h1);
 }
 h2 {
   // font-size: var(--fs-h2);
@@ -144,7 +146,7 @@ Clases especificas
 }
 @media screen and (min-width: 1024px) {
   .container {
-    max-width: calc(100vw - 25vw);
+    max-width: calc(100vw - 20vw);
     margin: 0 auto;
     overflow-x: hidden;
   }
@@ -154,7 +156,7 @@ Clases especificas
 
 @media screen and (min-width: 1280px) {
   .container {
-    max-width: calc(100vw - 30vw);
+    max-width: calc(100vw - 15vw);
     margin: 0 auto;
     overflow-x: hidden;
   }
